drivers/video/fbdev/exynos/dpu_9810/Kconfig: fix typo
Change-Id: I0b48d0394fb8aef0fb92f520458ea470c7a57818

--- a/drivers/video/fbdev/exynos/dpu_9810/Kconfig
+++ b/drivers/video/fbdev/exynos/dpu_9810/Kconfig
@@ -73,7 +73,7 @@ config EXYNOS_HIBERNATION_THREAD
         default n
 
 config SUPPORT_DOZE
-	bool "Suppot Doze mode to aod service"
+	bool "Support Doze mode to aod service"
 		depends on EXYNOS_DECON_9810
 		default n
 
