--- a/drivers/samsung/misc/Kconfig
+++ b/drivers/samsung/misc/Kconfig
@@ -98,7 +98,7 @@ config SEC_HQM_DEVICE
 
 comment "Logging Heavy Task Cpu Options"
 config SEC_HEAVY_TASK_CPU
-	bool "Enable heacy cpu core counting"
+	bool "Enable heavy cpu core counting"
 	default n
 	help
 	  This option enables heavy cpu core counting.
