--- a/arch/arm64/configs/exynos9810-r7_defconfig
+++ b/arch/arm64/configs/exynos9810-r7_defconfig
@@ -567,20 +567,11 @@ CONFIG_RANDOMIZE_MODULE_REGION_FULL=y
 CONFIG_CMDLINE=""
 # CONFIG_EFI is not set
 # CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE is not set
-CONFIG_UH=y
-# CONFIG_UH_DEBUG is not set
-CONFIG_UH_RKP=y
-CONFIG_UH_RKP_8G=y
+# CONFIG_UH is not set
 # CONFIG_UH_INFORM is not set
-# CONFIG_UH_RKP_FIMC_TYPE is not set
-CONFIG_RKP_KDP=y
-CONFIG_RKP_NS_PROT=y
-CONFIG_RKP_DMAP_PROT=y
-CONFIG_UH_LKM_BLOCK=y
-CONFIG_RKP_CFP=y
-CONFIG_RKP_CFP_JOPP=y
-CONFIG_RKP_CFP_JOPP_MAGIC=0x00be7bad
-# CONFIG_RKP_CFP_TEST is not set
+# CONFIG_UH_LKM_BLOCK is not set
+# CONFIG_RKP_CFP is not set
+# CONFIG_RKP_CFP_JOPP is not set
 
 #
 # Userspace binary formats
@@ -5812,8 +5803,8 @@ CONFIG_GAF=y
 # CONFIG_GAF_V4 is not set
 # CONFIG_GAF_V5 is not set
 CONFIG_GAF_V6=y
-CONFIG_SECURITY_DSMS=y
-CONFIG_SECURITY_DEFEX=y
+# CONFIG_SECURITY_DSMS is not set
+# CONFIG_SECURITY_DEFEX is not set
 # CONFIG_DEFEX_KERNEL_ONLY is not set
 CONFIG_DEFAULT_SECURITY_SELINUX=y
 # CONFIG_DEFAULT_SECURITY_DAC is not set
