--- a/arch/arm64/configs/exynos9810-r7_defconfig
+++ b/arch/arm64/configs/exynos9810-r7_defconfig
@@ -728,8 +728,8 @@ CONFIG_INET_DIAG_DESTROY=y
 CONFIG_TCP_CONG_ADVANCED=y
 CONFIG_TCP_CONG_BIC=y
 CONFIG_TCP_CONG_CUBIC=y
-CONFIG_TCP_CONG_WESTWOOD=m
-CONFIG_TCP_CONG_HTCP=m
+CONFIG_TCP_CONG_WESTWOOD=y
+CONFIG_TCP_CONG_HTCP=y
 # CONFIG_TCP_CONG_HSTCP is not set
 # CONFIG_TCP_CONG_HYBLA is not set
 # CONFIG_TCP_CONG_VEGAS is not set
@@ -744,6 +744,8 @@ CONFIG_TCP_CONG_HTCP=m
 # CONFIG_TCP_CONG_BBR is not set
 CONFIG_DEFAULT_BIC=y
 # CONFIG_DEFAULT_CUBIC is not set
+# CONFIG_DEFAULT_HTCP is not set
+# CONFIG_DEFAULT_WESTWOOD is not set
 # CONFIG_DEFAULT_RENO is not set
 CONFIG_DEFAULT_TCP_CONG="bic"
 # CONFIG_TCP_MD5SIG is not set
@@ -3210,7 +3212,7 @@ CONFIG_MALI_BIFROST_R19P0_Q=y
 # CONFIG_MALI_JOB_DUMP is not set
 # CONFIG_MALI_SEC_JOB_STATUS_CHECK is not set
 # CONFIG_MALI_SUSTAINABLE_OPT is not set
-CONFIG_MALI_KUTF=m
+CONFIG_MALI_KUTF=y
 # CONFIG_MALI_PLATFORM_POWER_DOWN_ONLY is not set
 CONFIG_MALI_REAL_HW=y
 # CONFIG_MALI_MEMORY_FULLY_BACKED is not set
