--- a/drivers/leds/Kconfig
+++ b/drivers/leds/Kconfig
@@ -533,6 +533,15 @@ config LEDS_MAX77693
 	  multifunction device. It has build in control for two leds in flash
 	  and torch mode.
 
+config LEDS_MAX77705_RGB
+	tristate "LED support for MAX77705 RGB"
+	depends on MFD_MAX77705 && LEDS_CLASS && I2C
+	help
+	  If you say yes here you will get support for
+	  the MAX77705 RGB led chip.
+	  To enable this driver, MFD_MAX77705 should be enabled and
+	  MFD_MAX77705 calls this driver.
+
 config LEDS_MAX8997
 	tristate "LED support for MAX8997 PMIC"
 	depends on LEDS_CLASS && MFD_MAX8997
