--- a/drivers/vibrator/Kconfig
+++ b/drivers/vibrator/Kconfig
@@ -4,3 +4,5 @@ source "drivers/vibrator/dc/Kconfig"
 
 source "drivers/vibrator/imagis/Kconfig"
 
+source "drivers/vibrator/max77705_haptic/Kconfig"
+
