--- a/drivers/vibrator/Makefile
+++ b/drivers/vibrator/Makefile
@@ -1,3 +1,4 @@
 obj-$(CONFIG_SEC_VIBRATOR)			+= common/
 obj-$(CONFIG_DC_VIBRATOR)			+= dc/
 obj-$(CONFIG_ISA1000_VIBRATOR)			+= imagis/
+obj-$(CONFIG_MOTOR_DRV_MAX77705)		+= max77705_haptic/
