--- a/drivers/vibrator/Kconfig
+++ b/drivers/vibrator/Kconfig
@@ -6,3 +6,5 @@ source "drivers/vibrator/imagis/Kconfig"
 
 source "drivers/vibrator/max77705_haptic/Kconfig"
 
+source "drivers/vibrator/sec_haptic/Kconfig"
+
