drivers: optics: hrm_max86915: import N960FXXU5ETF5
Change-Id: I4f40ade35e070968352abb60def5c1b7256c86ca

--- a/drivers/Kconfig
+++ b/drivers/Kconfig
@@ -240,6 +240,8 @@ source "drivers/sensorhub/brcm/Kconfig"
 
 source "drivers/sensors/Kconfig"
 
+source "drivers/optics/Kconfig"
+
 source "drivers/security/samsung/tzic/Kconfig"
 
 source "drivers/spu_verify/Kconfig"
