drivers: touchscreen: import N960FXXU5ETF5
Change-Id: I14b8312a931ccfbb9deb20ad312069d7b6c4f314

--- a/drivers/input/touchscreen/Makefile
+++ b/drivers/input/touchscreen/Makefile
@@ -102,6 +102,5 @@ obj-$(CONFIG_TOUCHSCREEN_ROHM_BU21023)	+= rohm_bu21023.o
 obj-$(CONFIG_TOUCHSCREEN_SEC_TS)	+= sec_ts/
 obj-$(CONFIG_TOUCHSCREEN_SEC_TS_A552)	+= sec_ts_a552/
 obj-$(CONFIG_TOUCHSCREEN_SEC_TS_Y771)	+= sec_ts/y771/
-obj-$(CONFIG_TOUCHSCREEN_FTS)           += stm/
-obj-$(CONFIG_TOUCHSCREEN_MELFAS_MSS100) += melfas/mss100/
-obj-$(CONFIG_TOUCHSCREEN_HIMAX_CHIPSET) += himax/himax_83102E/
+obj-$(CONFIG_TOUCHSCREEN_FTS)          += stm/
+obj-$(CONFIG_TOUCHSCREEN_FTS7_HAECHI)		+= stm/fts7/
