--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -1214,19 +1214,16 @@ config TOUCHSCREEN_ROHM_BU21023
 	  To compile this driver as a module, choose M here: the
 	  module will be called bu21023_ts.
 
-config TOUCHSCREEN_HIMAX_CHIPSET
-	bool "Himax touchpanel CHIPSET"
+config TOUCHSCREEN_DUMP_MODE
+	bool "touchscreen dump mode"
 	depends on I2C
 	help
-		Say Y here if you have a Himax CHIPSET touchscreen.
-		HIMAX controllers are multi touch controllers which can
-		report 10 touches at a time.
+	  Say Y here if you need to get raw data.
 
-		If unsure, say N.
+	  If unsure, say N.
 
 source "drivers/input/touchscreen/sec_ts/Kconfig"
 source "drivers/input/touchscreen/sec_ts/y771/Kconfig"
 source "drivers/input/touchscreen/stm/Kconfig"
-source "drivers/input/touchscreen/melfas/mss100/Kconfig"
-source "drivers/input/touchscreen/himax/himax_83102E/Kconfig"
+source "drivers/input/touchscreen/stm/fts7/Kconfig"
 endif
