--- a/sound/soc/samsung/Makefile
+++ b/sound/soc/samsung/Makefile
@@ -48,8 +48,7 @@ snd-soc-lowland-objs := lowland.o
 snd-soc-littlemill-objs := littlemill.o
 snd-soc-bells-objs := bells.o
 snd-soc-arndale-rt5631-objs := arndale_rt5631.o
-snd-soc-gtactive3-rt5665-rt5510-objs := gtactive3-rt5665-rt5510.o jack_rt5665_sysfs_cb.o
-snd-soc-r7-rt5665-tas2562-objs := r7-rt5665-tas2562.o jack_rt5665_sysfs_cb.o
+snd-soc-star-madera-objs := star_madera.o jack_madera_sysfs_cb.o
 snd-soc-sec-audio-objs := sec_audio_sysfs.o sec_audio_debug.o
 
 obj-$(CONFIG_SND_SOC_SAMSUNG_JIVE_WM8750) += snd-soc-jive-wm8750.o
@@ -79,6 +78,5 @@ obj-$(CONFIG_SND_SOC_ARNDALE_RT5631_ALC5631) += snd-soc-arndale-rt5631.o
 obj-$(CONFIG_SND_SOC_SAMSUNG_EXYNOS8895_MOON) += exynos8895_madera.o
 obj-$(CONFIG_SND_SOC_SAMSUNG_EXYNOS8895_COD3033) += exynos8895_sound.o
 obj-$(CONFIG_SND_SOC_SAMSUNG_EXYNOS9810_MOON) += exynos9810_madera.o
-obj-$(CONFIG_SND_SOC_SAMSUNG_GTACTIVE3_RT5665_RT5510) += snd-soc-gtactive3-rt5665-rt5510.o
-obj-$(CONFIG_SND_SOC_SAMSUNG_R7_RT5665_TAS2562) += snd-soc-r7-rt5665-tas2562.o
+obj-$(CONFIG_SND_SOC_SAMSUNG_STAR_ASHETON) += snd-soc-star-madera.o
 obj-$(CONFIG_SND_SOC_SAMSUNG_AUDIO) += snd-soc-sec-audio.o
