defconfig: crownlte: set CONFIG_INPUT_TOUCHSCREEN_TCLMV2
Change-Id: I105ff06382c35014fca8d9c60a579d49ab7dc7c7

--- a/arch/arm64/configs/exynos9810-crownlte_defconfig
+++ b/arch/arm64/configs/exynos9810-crownlte_defconfig
@@ -1948,6 +1948,8 @@ CONFIG_INPUT_FF_MEMLESS=y
 CONFIG_INPUT_EVDEV=y
 # CONFIG_INPUT_EVBUG is not set
 CONFIG_INPUT_KEYRESET=y
+# CONFIG_INPUT_TOUCHSCREEN_TCLM is not set
+CONFIG_INPUT_TOUCHSCREEN_TCLMV2=y
 CONFIG_INPUT_KEYCOMBO=y
 CONFIG_HALL=y
 CONFIG_CERTIFY_HALL=y
