--- a/arch/arm64/configs/exynos9810-crownlte_defconfig
+++ b/arch/arm64/configs/exynos9810-crownlte_defconfig
@@ -4913,12 +4913,10 @@ CONFIG_EXYNOS9810_BTS=y
 CONFIG_TRUSTONIC_TEE=y
 CONFIG_TRUSTONIC_TEE_LPAE=y
 # CONFIG_TRUSTONIC_TEE_DEBUG is not set
-CONFIG_TRUSTONIC_TRUSTED_UI=y
-CONFIG_TRUSTONIC_TRUSTED_UI_FB_BLANK=y
+# CONFIG_TRUSTONIC_TRUSTED_UI is not set
 CONFIG_SECURE_OS_CONTROL=y
 CONFIG_SECURE_OS_BOOSTER_API=y
 # CONFIG_SECURE_OS_SUPPORT_MCT_DISABLE is not set
-CONFIG_TRUSTED_UI_TOUCH_ENABLE=y
 # CONFIG_GUD_DRIVER_Q_LAUNCHING is not set
 # CONFIG_TEE is not set
 CONFIG_SEC_EXT=y
@@ -5025,14 +5023,6 @@ CONFIG_SEC_PM_BIGDATA=y
 # CONFIG_ISA1000_VIBRATOR is not set
 CONFIG_MOTOR_DRV_MAX77705=y
 CONFIG_SEC_HAPTIC=y
-CONFIG_FIVE_TEE_DRIVER=y
-# CONFIG_FIVE_USE_EMULATOR is not set
-CONFIG_FIVE_USE_TRUSTONIC=y
-# CONFIG_TEE_DRIVER_DEBUG is not set
-CONFIG_FIVE_TRUSTLET_PATH="five/ffffffff000000000000000000000072.tlbin"
-# CONFIG_FIVE_EARLY_LOAD_TRUSTED_APP is not set
-CONFIG_ICD=y
-CONFIG_ICD_USE_TRUSTONIC=y
 CONFIG_GPS_BCMxxxxx=y
 # CONFIG_GPS_BCM4752 is not set
 # CONFIG_GPS_BCM47521 is not set
@@ -5122,9 +5112,7 @@ CONFIG_BCM_GPS_SPI_DRIVER=y
 # CONFIG_SENSORS_A96T3X6_GTACTIVE3 is not set
 # CONFIG_SENSORS_HRMSENSOR is not set
 CONFIG_SENSORS_MAX86915=y
-CONFIG_TZIC=y
-CONFIG_TZIC_USE_TRUSTONIC=y
-# CONFIG_TZIC_DEFAULT is not set
+# CONFIG_TZIC is not set
 # CONFIG_SPU_VERIFY is not set
 
 #
@@ -5572,21 +5560,7 @@ CONFIG_MST_LDO=y
 CONFIG_MFC_CHARGER=y
 # CONFIG_MST_TEEGRIS is not set
 CONFIG_MST_LPM_CONTROL=y
-CONFIG_INTEGRITY=y
-CONFIG_INTEGRITY_SIGNATURE=y
-CONFIG_INTEGRITY_ASYMMETRIC_KEYS=y
-CONFIG_INTEGRITY_AUDIT=y
-# CONFIG_IMA is not set
-# CONFIG_EVM is not set
-CONFIG_FIVE=y
-# CONFIG_FIVE_DEBUG is not set
-CONFIG_FIVE_CERT_USER="x509_five_user.der"
-CONFIG_FIVE_DEFAULT_HASH_SHA1=y
-# CONFIG_FIVE_DEFAULT_HASH_SHA256 is not set
-# CONFIG_FIVE_DEFAULT_HASH_SHA512 is not set
-CONFIG_FIVE_DEFAULT_HASH="sha1"
-# CONFIG_FIVE_PA_FEATURE is not set
-# CONFIG_PROCA is not set
+# CONFIG_INTEGRITY is not set
 CONFIG_GAF=y
 # CONFIG_GAF_V3 is not set
 # CONFIG_GAF_V4 is not set
@@ -5634,7 +5608,7 @@ CONFIG_CRYPTO_WORKQUEUE=y
 CONFIG_CRYPTO_CRYPTD=y
 # CONFIG_CRYPTO_MCRYPTD is not set
 CONFIG_CRYPTO_AUTHENC=y
-CONFIG_CRYPTO_TEST=y
+# CONFIG_CRYPTO_TEST is not set
 CONFIG_CRYPTO_ABLK_HELPER=y
 
 #
@@ -5735,22 +5709,17 @@ CONFIG_CRYPTO_JITTERENTROPY=y
 # CONFIG_CRYPTO_USER_API_SKCIPHER is not set
 # CONFIG_CRYPTO_USER_API_RNG is not set
 # CONFIG_CRYPTO_USER_API_AEAD is not set
-CONFIG_CRYPTO_HASH_INFO=y
 # CONFIG_CRYPTO_POST_DEFERRED_INIT is not set
 CONFIG_CRYPTO_POST_LATE_INIT_SYNC=y
 # CONFIG_CRYPTO_POST_LATE_INIT is not set
 CONFIG_CRYPTO_HW=y
 # CONFIG_CRYPTO_DEV_S5P is not set
 # CONFIG_CRYPTO_DEV_CCP is not set
-CONFIG_ASYMMETRIC_KEY_TYPE=y
-CONFIG_ASYMMETRIC_PUBLIC_KEY_SUBTYPE=y
-CONFIG_X509_CERTIFICATE_PARSER=y
-# CONFIG_PKCS7_MESSAGE_PARSER is not set
+# CONFIG_ASYMMETRIC_KEY_TYPE is not set
 
 #
 # Certificates for signature checking
 #
-# CONFIG_SYSTEM_TRUSTED_KEYRING is not set
 CONFIG_ARM64_CRYPTO=y
 CONFIG_CRYPTO_SHA1_ARM64_CE=y
 CONFIG_CRYPTO_SHA2_ARM64_CE=y
@@ -5836,9 +5805,7 @@ CONFIG_CLZ_TAB=y
 # CONFIG_DDR is not set
 # CONFIG_IRQ_POLL is not set
 CONFIG_MPILIB=y
-CONFIG_SIGNATURE=y
 CONFIG_LIBFDT=y
-CONFIG_OID_REGISTRY=y
 # CONFIG_SG_SPLIT is not set
 CONFIG_SG_POOL=y
 CONFIG_ARCH_HAS_SG_CHAIN=y
